crates/strider-analyze/tests/snapshots/v3__arm_be__arithmetic__lshr.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "7" -> "3" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "8" -> "3" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "8" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "4" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0xff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="init\nr0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "10" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "11" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v12" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v12" -> "10" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "4" -> "10" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "11" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "13" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v14" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v14" -> "11" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "7" -> "11" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "13" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "15" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
